[gd_scene load_steps=5 format=3 uid="uid://cioqrlkwsv2nw"]

[ext_resource type="Texture2D" uid="uid://c3ck4wjii62sn" path="res://Textures/Toppings/BottomBun.png" id="1_1qria"]
[ext_resource type="Script" uid="uid://bx0jnpjnt5nk" path="res://Burger/burger.gd" id="1_ly3xb"]
[ext_resource type="Texture2D" uid="uid://d168utm6yvba4" path="res://Textures/Toppings/TopBun.png" id="3_nw8nv"]
[ext_resource type="AudioStream" uid="uid://b3tl33m1l0nnw" path="res://Sounds/GradeSound.wav" id="4_2ud2h"]

[node name="Burger" type="Node2D"]
script = ExtResource("1_ly3xb")

[node name="BottomBun" type="Sprite2D" parent="."]
position = Vector2(0, 8)
texture = ExtResource("1_1qria")
offset = Vector2(0, 5)

[node name="TopBun" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_nw8nv")

[node name="CalculationTimer" type="Timer" parent="."]
one_shot = true

[node name="FinishedTimer" type="Timer" parent="."]
one_shot = true

[node name="GradeSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_2ud2h")
volume_db = -10.0
max_polyphony = 32

[connection signal="timeout" from="CalculationTimer" to="." method="_on_calculation_timer_timeout"]
[connection signal="timeout" from="FinishedTimer" to="." method="_on_pause_finished"]
